# chinese-stock-mcp

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
chinese_stock_mcp/: __init__.py  server.py
